<resources>
    <string name="instructions_title"><u><b>How to Use</b></u></string>
    <string name="who_can_help_title_page">Who can Help</string>

    <string name="form_instructions_page_button"><u><b>Calculate: </b></u>Questionnaire page is designed to help you calculate whether your convictions are spent, and guide you on next step.</string>
    <string name="external_links_instructions_page_button"><u><b>Who can help: </b></u>Links to organisations that help and support people who have more serious criminal records.</string>
    <string name="about_instructions_page_button"><u><b>About: </b></u>More information about IPRT, our mission statement and objectives.\nAs well as information about iSkills and the team that developed this App.</string>


    <string name="calculator_link">Click To Calculate </string>
    <string name="app_name">SpentConviction</string>
    <string name="dob">Were you a minor (aged under 18) when you committed the offence(s)?</string>
    <string name="conviction_date">Date of your most recent conviction</string>
    <string name="offense_catagory">Category of Offence</string>
    <string name="which_court">Which Court?</string>
    <string name="no_of_convictions">Number of Convictions</string>
    <string name="no_of_convictions_hint">Enter number of convictions here</string>
    <string name="punishment_recieved">Punishment Received</string>
    <string name="submit">submit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">Back</string>
    <string name="calculate">Calculate</string>

    <array name="court_list_array">
        <item>District Court</item>
        <item>Circuit Court</item>
        <item>Central Criminal Court</item>
        <item>Special Criminal Court</item>
    </array>

    <array name="offense_array">

        <item>Minor Motoring Offence</item>
        <item>Dangerous Driving</item>
        <item>Insurance Fraud</item>
        <item>Public order offence</item>
        <item>Assault</item>
        <item>Sexual offence</item>
        <item>Homicide</item>
        <item>All Other Offences</item>



    </array>

    <array name="punishment_array">
        <item>Conditional discharge</item>
        <item>Prison sentence shorter than 12 months</item>
        <item>Suspended sentence shorter than 24 months, not revoked</item>
        <item>Prison sentence longer than 12 months</item>
        <item>Suspended sentence of more than 24 months</item>
        <item>Other (e.g. fine, community service, etc.)</item>

    </array>

    <!--Strings for external Links page-->
    <string name="charity1"><a href="http://www.iasio.ie">www.iasio.ie    </a></string>
    <string name="charity1Phone">01 866 2706</string>

    <string name="charity2"><a href="http://www.ucasadh.ie">www.ucasadh.ie   </a></string>
    <string name="charity2Phone">05 183 0479</string>

    <string name="charity3"><a href="http://www.careafterprison.ie">www.careafterprison.ie</a></string>
    <string name="charity3Phone">01 472 0973</string>

    <string name="charity4"><a href="http://www.bridge.ie">www.bridge.ie</a></string>
    <string name="charity4Phone">01 878 0901</string>

    <string name="charity5"><a href="http://www.justice.ie">www.justice.ie</a></string>
    <string name="charity5Phone">1890 221 227</string>

    <string name="charity6"><a href="http://www.citizensinformation.ie">www.citizensinformation.ie</a></string>
    <string name="charity6Phone">076 107 4000</string>


    <!--for the external links pop ups-->
    <string name="alert_title1"><u>\tCare After Prison</u></string>
    <string name="alert_message1">\n<b>Website:</b> www.careafterprison.ie
                                    \n<b>Email:</b> info@careafterprison.ie
                                    \n<b>Phone:</b> 01 472 0973
                                    \n\nCare After Prison is a peer led charity organisation which provides information, support and referral for ex-offenders their families and victims of crime.</string>

    <string name="alert_title2"><u>\tThe U-Casadh Project</u></string>
    <string name="alert_message2">\n<b>Website:</b> www.ucasadh.ie
                                    \n<b>Email:</b> press@ucasadh.ie
                                    \n<b>Phone:</b> 05 183 0479
                                    \n\nWe are a social inclusion project and registered charity based on the border of Waterford and Kilkenny. Our mission is to be a catalyst for change in attitudes to crime, social exclusion, rehabilitation and justice.</string>

    <string name="alert_title3"><u>\tBridge</u></string>
    <string name="alert_message3">\n<b>Website:</b> www.bridge.ie
                                    \n<b>Email:</b> siobhan@bridge.ie
                                    \n<b>Phone:</b> 01 878 0901
                                    \n\nThere are a number of exciting developments taking place for Bridge in 2015 with one of them being the launch of our new website. We expect it to be up and running by the end of February so check back then to find out what we do.</string>

    <string name="alert_title4"><u>\tIrish Association for the Social Integration of Offenders</u></string>
    <string name="alert_message4">\n<b>Website:</b> www.iasio.ie
                                    \n<b>Email:</b> prichardson@iasio.ie
                                    \n<b>Phone:</b> 01 866 2706
                                    \n\nAs a large community based organisation with a national remit IASIO works with adult offenders in the criminal justice system with a specific focus on alternatives to offending, custody and re-imprisonment. This is achieved through the provision of direct services to offenders both in the community and in all Irish prisons.</string>

    <string name="alert_title5"><u>\tDEPARTMENT OF JUSTICE AND EQUALITY</u></string>
    <string name="alert_message5">\n<b>Website:</b> www.justice.ie
                                    \n<b>Email:</b> foi@justice.ie
                                    \n<b>Phone:</b> 1890 221 227
                                    </string>

    <string name="alert_title6"><u>\tCitizens Information</u></string>
    <string name="alert_message6">\n<b>Website:</b> www.citizensinformation.ie
                                    \n<b>Email:</b> ciofeedback@ciboard.ie.
                                    \n<b>Phone:</b> 076 107 9000
                                    </string>


    <string name="alert_agree_option1">top</string>
    <string name="alert_disagree_option1">back</string>
    <string name="alert_disagree_toast1">Returning to external Links page</string>


    <!--Tomas strings-->
    <string name="mission_statement_main_scr">How to Use</string>
    <string name="form_main_scr">Calculate</string>
    <string name="external_links_main_scr">Who can help</string>
    <string name="about_manin_scr">About</string>

    <string name="alert_title"><u>Disclaimer</u></string>
    <string name="alert_message"><b>By clicking ACCEPT below, you agree to the following:</b>
                                    \n\nThe information provided within this app should only be used as a guide, it is not legal advice.
                                    \nIf in doubt please consult with a legal professional.
                                    \n\nIPRT is not responsible for any inaccurate results or future changes in the law.</string>
    <string name="alert_agree_option">ACCEPT</string>
    <string name="alert_disagree_option">DECLINE</string>
    <string name="alert_disagree_toast">In order to proceed, you must agree to the disclaimer</string>
    <string name="subtitle">Are my convictions spent?</string>




    //josh strings
    <string name="about_iprt">About IPRT:</string>

    <string name="about_developers">About Developers:</string>

    <string name="about_vert_one">The Irish Penal Reform Trust (IPRT) is Ireland\'s leading non-governmental organisation campaigning for the rights of people in prison and the progressive reform of Irish penal policy.</string>

    <string name="about_vert_two">Established in 1994, IPRT has a well-established role as an independent voice in public debate on the Irish penal system.</string>

    <string name="about_vert_three">IPRT is committed to reducing imprisonment, respecting the rights of everyone in the penal system, and progressive reform of the penal system based on evidence-led policies. In operational terms this means our focus is on: the use of imprisonment, including sentencing; alternatives to custody and diversion; and the treatment of those in detention.</string>

    <string name="about_vert_four">We publish a wide range of policy positions and research documents; we campaign vigorously across a wide range of penal policy issues; and we are committed to working with other agencies in the criminal justice system to achieve penal reform.</string>

    <string name="about_vert_five">We believe that penal reform is necessary, urgent and achievable.</string>

    <string name="donate_button">Donate to IPRT</string>

    <string name="app_info_button">App Info</string>

    <string name="iskill_button">iSkill Training</string>

    <string name="app_written_by">This App was developed during the iSkill Android Academy course on behalf of the Irish Penal Reform Trust.</string>

    <string name="about_land_one">The Irish Penal Reform Trust (IPRT) is Ireland\'s leading non-governmental organisation campaigning for the rights of people in prison and the progressive reform of Irish penal policy. \n\nEstablished in 1994, IPRT has a well-established role as an independent voice in public debate on the Irish penal system.</string>

    <string name="about_land_two">IPRT is committed to reducing imprisonment, respecting the rights of everyone in the penal system, and progressive reform of the penal system based on evidence-led policies. In operational terms this means our focus is on: the use of imprisonment, including sentencing; alternatives to custody and diversion; and the treatment of those in detention.</string>

    <string name="about_land_three">We publish a wide range of policy positions and research documents; we campaign vigorously across a wide range of penal policy issues; and we are committed to working with other agencies in the criminal justice system to achieve penal reform.</string>

    <string name="about_land_four">We believe that penal reform is necessary, urgent and achievable.</string>

    <string name="adam_name">Adam King</string>

    <string name="christina_name">Christina Onasanwo</string>

    <string name="eric_name">Eric Strong</string>

    <string name="gerard_name">Gerard Keogh</string>

    <string name="josh_name">Josh Carroll</string>

    <string name="tomas_name">Tomas G.</string>

    <string name="credits_string">Developers:</string>

    <string name="about_iskill">About iSkill:</string>

    <string name="iskill_description">iSkill Training is a limited company delivering flexible training courses suitable for all ages – employed and unemployed – under government contracts in a variety of areas of specialism. Our main focus is to provide inspiring and professional courses showing that learning is fun!</string>
</resources>
