<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        android:orientation="vertical"
        tools:context="ie.iprt.spentconvictioncalculator.AboutActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:src="@drawable/iprt_white_logo"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/about_iprt"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            android:textSize="16dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:alpha="0.6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_about"
                android:layout_marginRight="5dp"
                />
            <TextView
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/about_vert_one"/>
        </LinearLayout>

        <TextView
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/about_vert_two"/>

        <TextView
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_vert_three"
            />
        <TextView
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_vert_four"/>

        <TextView
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_vert_five"/>

        <TextView
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            android:textSize="16dp"
            android:text="@string/about_developers"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:text="@string/app_written_by"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp">
            <TextView
                android:textSize="16dp"
                android:textColor="@color/black"
                android:layout_marginRight="80dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/credits_string"/>
            <TextView
                android:textColor="@color/black"
                android:text="@string/adam_name"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="16dp"
                android:textColor="@color/white"
                android:layout_marginRight="80dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/credits_string"/>
            <TextView
                android:textColor="@color/black"
                android:text="@string/christina_name"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="16dp"
                android:textColor="@color/white"
                android:layout_marginRight="80dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/credits_string"/>
            <TextView
                android:textColor="@color/black"
                android:text="@string/eric_name"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="16dp"
                android:textColor="@color/white"
                android:layout_marginRight="80dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/credits_string"/>
            <TextView
                android:textColor="@color/black"
                android:text="@string/gerard_name"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="16dp"
                android:textColor="@color/white"
                android:layout_marginRight="80dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/credits_string"/>
            <TextView
                android:textColor="@color/black"
                android:text="@string/josh_name"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="16dp"
                android:textColor="@color/white"
                android:layout_marginRight="80dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/credits_string"/>
            <TextView
                android:textColor="@color/black"
                android:text="@string/tomas_name"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/donate_button"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_red_square"
            android:textColor="@color/white"
            android:onClick="onDonateClick"/>

        <Button
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/iskill_button"
            android:background="@drawable/button_red_square"
            android:textColor="@color/white"
            android:onClick="onIskillClick" />

    </LinearLayout>
</ScrollView>
